--- a/Apps.HTTP/Apps.HTTP.csproj
+++ b/Apps.HTTP/Apps.HTTP.csproj
@@ -4,8 +4,10 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Product>Blackbird HTTP</Product>
-        <Version>1.0.0</Version>
+		<Product>Blackbird HTTP</Product>
+		<Version>1.0.0</Version>
+		<Description>Perform basic HTTP requests (GET/POST/PUT/PATCH/DELETE)</Description>
+		<AssemblyName>Apps.HTTP</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
