--- a/Apps.HTTP/Apps.HTTP.csproj
+++ b/Apps.HTTP/Apps.HTTP.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-		<Product>Blackbird HTTP</Product>
-		<Version>1.0.0</Version>
+		<Product>HTTP</Product>
+		<Version>1.0.1</Version>
 		<Description>Perform basic HTTP requests (GET/POST/PUT/PATCH/DELETE)</Description>
 		<AssemblyName>Apps.HTTP</AssemblyName>
     </PropertyGroup>
@@ -15,5 +15,7 @@
       <PackageReference Include="Blackbird.Applications.Sdk.Utils" Version="1.0.3" />
       <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
     </ItemGroup>
-
+    <ItemGroup>
+        <EmbeddedResource CopyToOutputDirectory="Always" Include="image\icon.png"/>
+    </ItemGroup>
 </Project>
