--- a/Tests.HTTP/Tests.HTTP.csproj
+++ b/Tests.HTTP/Tests.HTTP.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -31,7 +31,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="TestFiles\" />
     <Folder Include="TestFiles\Output\" />
   </ItemGroup>
 
