--- a/Apps.HTTP/Apps.HTTP.csproj
+++ b/Apps.HTTP/Apps.HTTP.csproj
@@ -4,13 +4,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Product>HTTP</Product>
-    <Version>1.0.14</Version>
+    <Version>1.0.15</Version>
 
     <Description>Perform basic HTTP requests (GET/POST/PUT/PATCH/DELETE)</Description>
     <AssemblyName>Apps.HTTP</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Blackbird.Applications.SDK.Blueprints" Version="1.0.0" />
+    <PackageReference Include="Blackbird.Applications.SDK.Blueprints" Version="1.0.0-rc.10308" />
     <PackageReference Include="Blackbird.Applications.SDK.Extensions.FileManagement" Version="1.0.1" />
     <PackageReference Include="Blackbird.Applications.Sdk.Utils" Version="1.0.26" />
   </ItemGroup>
